Cập nhật xong việc CRUD hotel
